# arduinolibclient

./: .gitignore  CMakeLists.txt  device_config.ini  platformio.ini  switch_config.ini
scripts/: generate_device_macros_pio.py  generate_switch_macros.py
src/: AllTests.h  DeviceCollection.h  DeviceDetail.h  DeviceInfoProvider.h  IDeviceInfoProvider.h  IRelayController.h  ISwitch.h  ISwitchDevice.h  PhysicalSwitchReader.h  RelayController.h  StubPhysicalSwitchReader.h  StubRelayController.h  Switch.h  SwitchDevice.h  SwitchState.h  arduino_main.cpp  arduino_server.cpp  desktop_main.cpp  desktop_server.cpp  main.cpp  rest_tests.cpp
src/controller/: 01-TestDto.h  02-MyController.h  03-RetDto.h  CustomException.h  ExceptionTestController.h  IExceptionTestController.h  IResponseEntityController.h  ISwitchController.h  ResponseEntityController.h  Switch.h  SwitchController.h  SwitchDto.h  SwitchRepository.h  SwitchResponseDto.h  TestFileManager.h  User.h  UserRepository.h  UserRepositoryTests.cpp  UserRepositoryTests.h
src/controller_tests/: ExceptionTestControllerTests.h  ResponseEntityControllerTests.h  WifiCredentialsControllerTests.h
src/http_client/: ISpecialHttpClient.h  SpecialHttpClient.h
src/repository_tests/: Customer.h  CustomerRepository.h  Order.h  OrderRepository.h  Product.h  ProductRepository.h  RepositoryTests.h  UserAccount.h
src/serialization_tests/: Address.h  Person.h  Product.h  ProductX.h  SerializationUtilityTests.h
src/service/: ISwitchService.h  SwitchService.h
src/tests/: AllTests.h  EndpointTrieTests.h  RestTests.h  TestUtils.h
src/thread_tests/: ThreadPoolMathExampleTests.h  ThreadPoolTests.h
